journald: do not overwrite syslog facility when parsing priority

https://bugs.freedesktop.org/show_bug.cgi?id=65610